--- a/index.html
+++ b/index.html
@@ -2204,5 +2204,5 @@
 src="https://code.jquery.com/jquery-2.2.3.min.js"
 integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
 crossorigin="anonymous"></script>
-<!-- <script data-rocketsrc="./js/app.js" type="text/rocketscript"></script> -->
+<script src="./js/app2.js"></script>
 </html>
